@@ -1,3 +1,10 @@
+2009-01-05  Matthias Clasen <mclasen@redhat.com>
+
+	Bug 566064 – Add NOATIME flag to query_info_flags
+
+	* glocalfileinfo.c (get_content_type): Try using O_NOATIME when
+	sniffing for mime types. Based on a patch by A. Walton
+
 2009-01-05  Ryan Lortie  <desrt@desrt.ca>
 
 	* tests/.gitignore: improve
